--- a/templates/A.html
+++ b/templates/A.html
@@ -57,15 +57,15 @@
 
   <body>
     <header>
-      <h1>cact-I + cact-you = cact-us</h1>
+      <h1 style="color:white; background-color:lightgreen; border:1px solid lightseagreen;">cact-I + cact-you = cact-us</h1>
       <!-- Ideas: making it pretty/look real, making it look reliable,
           choosing different images, changing layout, etc. Show your creativity!
           We want to see meaningful differences -->
       <!-- Feel free to beautify the site, and/or update the content-->
-      <i>An online succulent store
-        for your inner plant lady.
-      </i>
     </header>
+    <nav>
+      <i>An online succulent store for your inner plant lady. </i>
+    </nav>
 
     <!-- If you add any new buttons, you need to update the javascript file, for
     corresponding button id, so that clicks of that button could be logged -->
