--- a/templates/B.html
+++ b/templates/B.html
@@ -57,7 +57,7 @@
 
   <body>
     <header>
-      <h1>cact-I + cact-you = cact-us</h1>
+      <h1 style="font-size: 40px;">cact-I + cact-you = cact-us</h1>
       <!-- Ideas: making it pretty/look real, making it look reliable,
           choosing different images, changing layout, etc. Show your creativity!
           We want to see meaningful differences -->
@@ -77,7 +77,7 @@
         </button>
         <span><span id="mp1-added">0</span> in cart</span>
         <p>Stunning succulent combo, featuring 3 adolescent cacti in
-          industrial copper pots. <i>$9.99</i>
+          industrial copper pots. <b>$9.99</b>
         </p>
       </div>
 
@@ -87,7 +87,7 @@
           Add To Cart
         </button>
         <span><span id="mp2-added">0</span> in cart</span>
-        <p>Beautiful prickly pair in modern geometric pots. <i>$14.99</i>
+        <p>Beautiful prickly pair in modern geometric pots. <b>$14.99</b>
         </p>
       </div>
 
@@ -97,7 +97,7 @@
           Add To Cart
         </button>
         <span><span id="mp3-added">0</span> in cart</span>
-        <p>Cacti and succulent mini-garden in a congenial and rustic pot. <i>$25.99</i>
+        <p>Cacti and succulent mini-garden in a congenial and rustic pot. <b>$25.99</b>
         </p>
       </div>
 
@@ -107,7 +107,7 @@
           Add To Cart
         </button>
         <span><span id="mp4-added">0</span> in cart</span>
-        <p>Cacti, succulent, and garden combo in handcrafted pots. <i>$34.99</i>
+        <p>Cacti, succulent, and garden combo in handcrafted pots. <b>$34.99</b>
         </p>
       </div>
 
