--- a/templates/A.html
+++ b/templates/A.html
@@ -70,7 +70,7 @@
     <!-- If you add any new buttons, you need to update the javascript file, for
     corresponding button id, so that clicks of that button could be logged -->
     <div class="content-pane">
-      <div class="vendor-wrapper" id="mp1">
+      <div class="vendor-wrapper" id="mp1" style="background-color: greenyellow;">
         <img src="../static/coppercombo.png" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp1">
           Add To Cart
@@ -81,7 +81,7 @@
         </p>
       </div>
 
-      <div class="vendor-wrapper" id="mp2">
+      <div class="vendor-wrapper" id="mp2" style="background-color: lightgreen;">
         <img src="../static/geoprickly.jpg" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp2">
           Add To Cart
@@ -91,7 +91,7 @@
         </p>
       </div>
 
-      <div class="vendor-wrapper" id="mp3">
+      <div class="vendor-wrapper" id="mp3" style="background-color: greenyellow;">
         <img src="../static/garden.jpg" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp3">
           Add To Cart
@@ -101,7 +101,7 @@
         </p>
       </div>
 
-      <div class="vendor-wrapper" id="mp4">
+      <div class="vendor-wrapper" id="mp4" style="background-color: lightgreen;">
         <img src="../static/garden-combo.jpg" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp4">
           Add To Cart
